fixed wind and humidity

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li >last updated at <span id="date">
                 friday 5:35</span>
             </li>
-            <li id="descrription">
+            <li id="description">
               cloudy  
             </li>
         </ul>
