added link github to footer

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </div>
 <footer>
     <small>
-        <a href=""
+        <a href="https://github.com/maryamrz402/prj-weather-app"
         target="_blank">
         open-source code</a>
          by Maryam Reyhanian
