--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
         target="_blank">
         open-source code</a>
          by Maryam Reyhanian
-    </small></footer>
+        </small>
+    </footer>
 
     </div>
     
