--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
                 <div class="row">
                     <div class="col-9">
                 <input type="search"
-                placeholder="please type a city"
+                placeholder="please Enter a City"
                 class="form-control"
                 id="city-input"
                 autocomplete="off"
                 autofocus="on"
                 ></div><div class="col-3">
                 <input type="submit" 
-                value="search" class="btn btn-primary w-100 "/></div>
+                value="search" class="btn btn-light w-100 "/></div>
             </div>
             </form>
         <h1 id="city">
